--- a/src/components/searchBlock/searchBlockComponent.pug
+++ b/src/components/searchBlock/searchBlockComponent.pug
@@ -5,7 +5,7 @@ style
 
 .content_container_searchBlockContainer
     .content_container_searchBlockContainer_background
-        img(src="../../assets/images/backgroundImg.png", alt="")
+        img(src="../../assets/images/backgroundImg.png", alt="" id='search_background')
     .content_container_searchBlockContainer_innerContainer
         .content_container_searchBlockContainer_innerContainer_title 
             p Sdaem.by - у нас живут 
