rentTypesBlock 1.0: added adaptive

--- a/src/components/rentsBlock/rentTypesCardsBlock.pug
+++ b/src/components/rentsBlock/rentTypesCardsBlock.pug
@@ -39,70 +39,70 @@ include ../spaceContainer.pug
                 .rentTypesCardsBlock_cards_innerContainer_card_item(class = 'arrowBtn')
                     +circleBtn({cls: 'button', color: 'white', icon: 'arrowRight'})
     .rentTypesCardsBlock_buttonList
-        .rentTypesCardsBlock_buttonList_item
+        .rentTypesCardsBlock_buttonList_item(id = 'rooms_types')
             .rentTypesCardsBlock_buttonList_item_title
                 span Квартиры
             .rentTypesCardsBlock_buttonList_item_wrapper
 
-                .rentTypesCardsBlock_buttonList_item_button
+                .rentTypesCardsBlock_buttonList_item_button(id ='rooms_button_minsk')
                     .rentTypesCardsBlock_buttonList_item_button_text Квартиры в Минске
                     .rentTypesCardsBlock_buttonList_item_button_number 3567
 
-                .rentTypesCardsBlock_buttonList_item_button
+                .rentTypesCardsBlock_buttonList_item_button(id ='rooms_button_gomel')
                     .rentTypesCardsBlock_buttonList_item_button_text Квартиры в Гомеле
                     .rentTypesCardsBlock_buttonList_item_button_number 2032
 
-                .rentTypesCardsBlock_buttonList_item_button
+                .rentTypesCardsBlock_buttonList_item_button(id ='rooms_button_grodno')
                     .rentTypesCardsBlock_buttonList_item_button_text Квартиры в Гродно
                     .rentTypesCardsBlock_buttonList_item_button_number 2302
 
-                .rentTypesCardsBlock_buttonList_item_button
+                .rentTypesCardsBlock_buttonList_item_button(id ='rooms_button_mogilev')
                     .rentTypesCardsBlock_buttonList_item_button_text Квартиры в Могилеве
                     .rentTypesCardsBlock_buttonList_item_button_number 110
 
-                .rentTypesCardsBlock_buttonList_item_button
+                .rentTypesCardsBlock_buttonList_item_button(id ='rooms_button_brest')
                     .rentTypesCardsBlock_buttonList_item_button_text Квартиры в Бресте
                     .rentTypesCardsBlock_buttonList_item_button_number 110
 
-                .rentTypesCardsBlock_buttonList_item_button
+                .rentTypesCardsBlock_buttonList_item_button(id ='rooms_button_vitebsk')
                     .rentTypesCardsBlock_buttonList_item_button_text Квартиры в Витебск
                     .rentTypesCardsBlock_buttonList_item_button_number 110
 
-        .rentTypesCardsBlock_buttonList_item
+        .rentTypesCardsBlock_buttonList_item(id = 'houses_types')
             .rentTypesCardsBlock_buttonList_item_title
                 span Коттеджи и усадьбы
             .rentTypesCardsBlock_buttonList_item_wrapper
-                .rentTypesCardsBlock_buttonList_item_button
+                .rentTypesCardsBlock_buttonList_item_button(id ='houses_button_agro')
                     .rentTypesCardsBlock_buttonList_item_button_text Агроусадьбы
                     .rentTypesCardsBlock_buttonList_item_button_number 110
 
-                .rentTypesCardsBlock_buttonList_item_button
+                .rentTypesCardsBlock_buttonList_item_button(id ='houses_button_cottage')
                     .rentTypesCardsBlock_buttonList_item_button_text Коттеджи
                     .rentTypesCardsBlock_buttonList_item_button_number 110
 
-                .rentTypesCardsBlock_buttonList_item_button
+                .rentTypesCardsBlock_buttonList_item_button(id ='houses_button_nature')
                     .rentTypesCardsBlock_buttonList_item_button_text Загородный комплекс
                     .rentTypesCardsBlock_buttonList_item_button_number 110
 
-                .rentTypesCardsBlock_buttonList_item_button
+                .rentTypesCardsBlock_buttonList_item_button(id ='houses_button_rest')
                     .rentTypesCardsBlock_buttonList_item_button_text Базы отдыха
                     .rentTypesCardsBlock_buttonList_item_button_number 110
 
-            .rentTypesCardsBlock_buttonList_item_button
+            .rentTypesCardsBlock_buttonList_item_button(id= 'rent_list_more_button')
                 +textSelection({text: 'Еще', icon: 'arrow', id: 'rent_types_button'})
                 
                 
-        .rentTypesCardsBlock_buttonList_item
+        .rentTypesCardsBlock_buttonList_item(id = 'new_types')
             .rentTypesCardsBlock_buttonList_item_title
                 span Популярные направления
             .rentTypesCardsBlock_buttonList_item_wrapper
-                .rentTypesCardsBlock_buttonList_item_button
+                .rentTypesCardsBlock_buttonList_item_button(id ='houses_button_brasl')
                     .rentTypesCardsBlock_buttonList_item_button_text Коттеджи и усадьбы на о. Брасласких 
 
-                .rentTypesCardsBlock_buttonList_item_button
+                .rentTypesCardsBlock_buttonList_item_button(id ='houses_button_naro')
                     .rentTypesCardsBlock_buttonList_item_button_text Коттеджи и усадьбы (жилье) на Нарочи
 
-                .rentTypesCardsBlock_buttonList_item_button
+                .rentTypesCardsBlock_buttonList_item_button(id ='houses_button_water')
                     .rentTypesCardsBlock_buttonList_item_button_text Коттеджи и усадьбы (жилье) у воды,<br> на берегу, на озере
 
 
