--- a/src/components/components.scss
+++ b/src/components/components.scss
@@ -1564,6 +1564,37 @@
         }
 
     }
+
+    .rentTypesCardsBlock {
+        width: 100%;
+        height: auto;
+        height: auto;
+        flex-wrap: wrap;
+
+        &_cards {
+            width: 100%;
+            height: auto;
+            align-items: center;
+            flex-wrap: wrap;
+
+            &_innerContainer {
+                flex-wrap: wrap;
+                justify-content: center;
+                height: auto;
+                width: auto;
+                
+                &.firstBlock {
+                    height: auto;
+                    width: auto;
+                    flex-wrap: wrap;
+                }
+            }
+        }
+        &_buttonList {
+            margin-top: 20px;
+            margin-right: 20px;
+        }
+    }
 }
 @media (max-width: 950px) {
     .map {
@@ -1602,6 +1633,47 @@
         }
     }
     }
+
+    .rentTypesCardsBlock {
+        &_cards {
+
+            &_innerContainer {
+                width: calc(100% - 40px);
+                &.firstBlock {
+                    width: calc(100% - 40px);
+                }
+                
+                &_card {
+
+                    background-position: center;
+                    background-size:cover;
+                    min-height: 270px;
+                    flex-wrap: wrap;
+                    
+                    &.rooms {
+                        width: 100%;
+                    }
+                    &.houses {
+                        width: 100%;
+                    }
+                    &.baths {
+                        width: 100%;
+                    }
+                    &.cars {
+                        width: 100%;
+                    }
+
+                    &_item {
+
+                        &.buttons {
+                            width: calc(100% - 74px);
+                            flex-wrap: wrap;
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
 @media (max-width: 752px) {
     .content_container_searchBlockContainer{
@@ -1621,6 +1693,7 @@
 }
     }
 }
+
 @media (max-width: 480px) {
     .content_container_searchBlockContainer {
        &_innerContainer {
