rentTypesBlock 1.1: added links

--- a/src/components/components.scss
+++ b/src/components/components.scss
@@ -228,6 +228,9 @@
     @include centringMixin(space-between);
     margin: 84px 0px;
     position: relative;
+    a {
+        text-decoration: none;
+    }
     &_cards {
         display: flex;
         flex-direction: column;
