header 1.3: fixes bottom buttons

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -169,6 +169,9 @@ header {
     justify-content: space-between;
     align-items: center;
   }
+  .listBtn_Group_Middle_Bottom{
+    height: 100%;
+  }
 }
 
 @media (max-width: 1439px) {
