rentRoomsCards 1.2: finished cards states, servicesBlock 1.0: added adaptive and map

--- a/src/components/buttons/buttons.scss
+++ b/src/components/buttons/buttons.scss
@@ -393,8 +393,8 @@ $hoverLine: 2px;
         box-shadow: 0px 10px 20px rgba(0, 96, 206, 0.1);
 
         &:active {
-            padding: 11px 14px;
-
+            //padding: 11px 14px;
+            padding: 9px 12px;
             ul {
                 margin-left: -15px;
                 display: block;
@@ -402,7 +402,8 @@ $hoverLine: 2px;
 
         }
         &.active {
-          padding: 11px 14px;
+          //padding: 11px 14px;
+          padding: 9px 12px;
 
             ul {
                 margin-left: -15px;
