--- a/src/components/components.scss
+++ b/src/components/components.scss
@@ -370,7 +370,10 @@
     margin-top: 30px;
     display: flex;
     position: relative;
-    
+    .menuContent {
+        left: 100px;
+        z-index: 100;
+    }
     &_background {
         position: absolute;
         z-index: 0;
@@ -418,7 +421,7 @@
                 display: flex;
                 gap: 30px;
                 //position: relative;
-                z-index: 999;
+                z-index: 900;
                 
             }
         }
@@ -476,7 +479,7 @@
 
                 &_number {
                     @include fontStd($black, 60px, 700, 73px);
-
+                    @include noSelect;
                     span {
                         color: #664EF9;
                     }
@@ -1634,6 +1637,27 @@
             }
         }
     }
+
+    .content_container_servicesContainer {
+    
+        width: 100%;
+        &_innerContainer {
+            width: 100%;
+
+            &_background {
+                width: 100%;
+                
+                img { 
+                    width: 100%;
+                    height: 441px;
+                }
+            }
+            &_cards {
+                width: 100%;
+                flex-wrap: wrap;
+            }
+        }
+    }
 }
 @media (max-width: 950px) {
     .map {
@@ -1714,6 +1738,11 @@
         }
     }
     .rentRoomsCardsBlock {
+        .menuContent {
+            img {
+                margin-top: 0;
+            }
+        };
         height: auto;
         &_background {
             height: 100%;
@@ -1723,6 +1752,7 @@
             width: calc(100% - 80px);
             margin-left: 40px;
             margin-right: 40px;
+            z-index: 10;
             &_top {
                 
                 &_buttons {
@@ -1750,7 +1780,23 @@
             }
         }
     }
-}
+
+    .content_container_servicesContainer {
+        .spaceContainer {
+            display: none;
+        }
+        &_innerContainer {
+            &_background {   
+                img { 
+                    margin-top: 0;
+                    width: 100%;
+                    height: 441px;
+                }
+            }
+            }
+        }
+    }
+
 @media (max-width: 752px) {
     .content_container_searchBlockContainer{
         &_innerContainer {
@@ -1910,7 +1956,66 @@
             }
         }
     }
-}
+
+    .content_container_servicesContainer {
+
+        &_innerContainer {
+            &_background {   
+                img { 
+                    margin-top: 0;
+                    width: 100%;
+                    height: 441px;
+                }
+            }
+            &_searchContainer {
+                margin-left: 10px;
+                margin-right: 10px;
+            }
+            &_cards {
+                &_item {
+                    width: calc(100% - 40px);
+                    height: auto;
+                    &_wrapper {
+                        margin: 10px;
+                    }
+                    &_bottom {
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        height: auto;
+                        .stdBtn {
+                            margin: 0;
+                            width: calc(100% - 20px);
+                            justify-content: center;
+                            align-items: center;
+                            max-height: none;
+                            height: auto;
+
+                            &_innerText {
+                                width: calc(100% - 20px);
+                                height: 100%;
+                                display: flex;
+                                flex-wrap: wrap;
+                                word-wrap: break-word;
+                                justify-content: center;
+                                span {
+                                    display: flex;
+                                    width: 100%;
+                                    flex-wrap: wrap;
+                                    height: auto;
+                                    word-wrap: break-word;
+                                    white-space:pre-wrap;
+                                }
+                            }
+
+                        }
+                    }
+                }
+            }
+            }
+        }
+    }
+
 @media (max-width: 380px) {
     .rentCard {
         width: 300px;
