--- a/src/components/rentsBlock/rentCard.pug
+++ b/src/components/rentsBlock/rentCard.pug
@@ -1,8 +1,8 @@
 include ../buttons/buttons.pug
 include ../content/content.pug
 
-mixin rentCard(vars = {status: 'Gold', photo: '../../assets/images/card_1_Img.png',price: '65.00 BYN',capacity: '4 (2+2)',rooms: '4 комн.',size: '179',address: 'Минск, б-р Мулявина, д. 10',metro: [{icon: 'metro', name: 'Грушевка'}, {icon: 'rail', name: 'Шабаны'}],description: 'Какое-то описание квартиры, описание квартиры, описание квартиры, описание квартиры, описание квартиры, описание квартиры, описание квартиры, описание квартиры, описание квартиры, описание ...', ownerInfo: {photo: '../../assets/images/boyNextDoorImg.png', name: 'Dimitry', phone: ' +375 (29) 291-14-44', email: 'vladimir6234@tut.by'}, type: 'active', style: 'vertical'})
-    .rentCard(class = vars.style)
+mixin rentCard(vars = {status: 'Gold', photo: '../../assets/images/card_1_Img.png',price: '65.00 BYN',capacity: '4 (2+2)',rooms: '4 комн.',size: '179',address: 'Минск, б-р Мулявина, д. 10',metro: [{icon: 'metro', name: 'Грушевка'}, {icon: 'rail', name: 'Шабаны'}],description: 'Какое-то описание квартиры, описание квартиры, описание квартиры, описание квартиры, описание квартиры, описание квартиры, описание квартиры, описание квартиры, описание квартиры, описание ...', ownerInfo: {photo: '../../assets/images/boyNextDoorImg.png', name: 'Dimitry', phone: ' +375 (29) 291-14-44', email: 'vladimir6234@tut.by'}, type: 'active', style: 'vertical', id: '1'})
+    .rentCard(class = vars.style id = `rent_card_${vars.id}`)
         .rentCard_top(class = vars.style)
             .rentCard_top_status(class = vars.style)
                 span= vars.status
@@ -15,28 +15,31 @@ mixin rentCard(vars = {status: 'Gold', photo: '../../assets/images/card_1_Img.pn
                     .rentCard_info(class = vars.style)
                         .rentCard_info_rooms(class = vars.style)
                             .rentCard_info_rooms_price(class = vars.style)
-                                span(class= 'price')= vars.price
-                                span(class= 'type')= 'За сутки'
+                                span(class= 'price' id= `card_price_${vars.id}`)= vars.price
+                                span(class= 'type' id= `card_type_${vars.id}`)= 'За сутки'
                             .rentCard_info_rooms_buttons(class = vars.style)
                                 .rentCard_info_rooms_buttons_item
                                     include ../../assets/images/userImg.svg
-                                    span= vars.capacity 
-                                .rentCard_info_rooms_buttons_item= vars.rooms
-                                .rentCard_info_rooms_buttons_item= `${vars.size} м²`
+                                    span(id= `card_capacity_${vars.id}`)= vars.capacity 
+                                .rentCard_info_rooms_buttons_item(id= `card_rooms_${vars.id}`)= vars.rooms
+                                .rentCard_info_rooms_buttons_item(id= `card_size_${vars.id}`)= `${vars.size} м²`
                         .rentCard_info_address
                             .rentCard_info_address_location
                                 include ../../assets/images/locBigImg.svg
-                                span= vars.address
+                                span(id= `card_address_${vars.id}`)= vars.address
                             .rentCard_info_address_stations
+                                -let i = 0;
                                 each elm in vars.metro
+
                                     .rentCard_info_address_stations_item
                                         case elm.icon
                                             when 'metro'
                                                 include ../../assets/images/metroImg.svg
                                             when 'rail'
                                                 include ../../assets/images/pointImg.svg
-                                        span= elm.name             
-                        .rentCard_info_description= vars.description
+                                        span(id= `card_station_${i++}_${vars.id}`)= elm.name 
+                                                    
+                        .rentCard_info_description(id= `card_description_${vars.id}`)= vars.description
                     .rentCard_line
                         hr
                     .rentCard_bottom(class = vars.style)
@@ -45,31 +48,32 @@ mixin rentCard(vars = {status: 'Gold', photo: '../../assets/images/card_1_Img.pn
                                 +circleBtn({cls: 'button', color: 'heart', icon: 'heart'})
                             .rentCard_bottom_left_contacts
                                 +menuBtn(
-                                {text: 'Контакты', cls:'phone', color: 'menu purpleText', type: 'w7', gap: '10px', icon: 'phone', iconPlace: 'right', iconColor: 'purple' , width: '124px', menuType: 'content'},
+                                {text: 'Контакты', cls:'phone', color: 'menu purpleText', type: 'w7', gap: '10px', icon: 'phone', iconPlace: 'right', iconColor: 'purple' , width: '124px', menuType: 'content', id: `card_contacts_button_${vars.id}`},
                                 [], {photo: vars.ownerInfo.photo, name: vars.ownerInfo.name, phone: vars.ownerInfo.phone, email: vars.ownerInfo.email})
                         .rentCard_bottom_right
                             .rentCard_bottom_buttons_more
-                                +stdBtn({text: 'Подробнее', cls:'primary', color: 'yellow light', type: 'w7', })
+                                +stdBtn({text: 'Подробнее', cls:'primary', color: 'yellow light', type: 'w7', id: `card_more_button_${vars.id}`})
 
                 when 'horizontal'
                     .rentCard_info(class = vars.style)
                         .rentCard_info_rooms(class = vars.style)
-                            .rentCard_info_rooms_name(class = vars.style)= vars.name
+                            .rentCard_info_rooms_name(class = vars.style id= `card_name_${vars.id}`)= vars.name
                                 .rentCard_info_address(class = vars.style)
                                     .rentCard_info_address_location
                                         include ../../assets/images/locBigImg.svg
-                                        span= vars.address
+                                        span(id= `card_address_${vars.id}`)= vars.address
                             .rentCard_info_rooms_price(class = vars.style)
-                                span(class= 'price')= vars.price
-                                span(class= 'type')= 'За сутки'
+                                span(class= 'price' id= `card_price_${vars.id}`)= vars.price
+                                span(class= 'type' id= `card_type_${vars.id}`)= 'За сутки'
                         
                         .rentCard_info_rooms_buttons(class = vars.style)
                             .rentCard_info_rooms_buttons_item
                                 include ../../assets/images/userImg.svg
-                                span= vars.capacity 
-                            .rentCard_info_rooms_buttons_item= vars.rooms
+                                span(id= `card_capacity_${vars.id}`)= vars.capacity 
+                            .rentCard_info_rooms_buttons_item(id= `card_rooms_${vars.id}`)= vars.rooms
                         
                             .rentCard_info_address_stations
+                                -let v = 0;
                                 each elm in vars.metro
                                     .rentCard_info_address_stations_item
                                         case elm.icon
@@ -77,23 +81,23 @@ mixin rentCard(vars = {status: 'Gold', photo: '../../assets/images/card_1_Img.pn
                                                 include ../../assets/images/metroImg.svg
                                             when 'rail'
                                                 include ../../assets/images/pointImg.svg
-                                        span= elm.name             
-                        .rentCard_info_description(class = vars.style)= vars.description
+                                        span(id= `card_station_${v++}_${vars.id}`)= elm.name             
+                        .rentCard_info_description(class = vars.style id= `card_description_${vars.id}`)= vars.description
 
                     .rentCard_bottom(class = vars.style)
                         .rentCard_bottom_left
                             
                             .rentCard_bottom_left_contacts
                                 +menuBtn(
-                                {text: 'Контакты', cls:'phone', color: 'menu purpleText', type: 'w7', gap: '10px', icon: 'phone', iconPlace: 'right', iconColor: 'purple' , width: '124px', menuType: 'content'},
+                                {text: 'Контакты', cls:'phone', color: 'menu purpleText', type: 'w7', gap: '10px', icon: 'phone', iconPlace: 'right', iconColor: 'purple' , width: '124px', menuType: 'content', id: `card_contacts_button_${vars.id}`},
                                 [], {photo: vars.ownerInfo.photo, name: vars.ownerInfo.name, phone: vars.ownerInfo.phone, email: vars.ownerInfo.email})
                             .rentCard_bottom_left_fav(class= vars.type)
-                                +stdBtn({text: 'В закладки', cls:'heart', color: 'heart', type: 'w7',})
+                                +stdBtn({text: 'В закладки', cls:'heart', color: 'heart', type: 'w7', id: `contacts_button_${vars.id}`})
                         .rentCard_bottom_right
                             .rentCard_bottom_buttons_more
-                                +stdBtn({text: 'Подробнее', cls:'primary', color: 'yellow light', type: 'w7', })
+                                +stdBtn({text: 'Подробнее', cls:'primary', color: 'yellow light', type: 'w7', id: `card_more_button_${vars.id}`})
 
 mixin rentCardList(varsObject)
     each elm in varsObject
-        .rentRoomsCardsBlock_innerContainer_cards_item
+        .rentRoomsCardsBlock_innerContainer_cards_item(id = `card_item_${elm.id}`)
             +rentCard(elm)
