--- a/src/components/exampleBlock/exampleBlockComponent.pug
+++ b/src/components/exampleBlock/exampleBlockComponent.pug
@@ -21,26 +21,31 @@ include ../spaceContainer.pug
             .content_container_exampleContainer_innerContainer_right_wrapper
                 .content_container_exampleContainer_innerContainer_right_title Новости
                 .content_container_exampleContainer_innerContainer_right_list
-                    .content_container_exampleContainer_innerContainer_right_list_item
-                        .content_container_exampleContainer_innerContainer_right_list_item_text Линия Сталина: суровый отдых в усадьбах  на сутки 
-                        .content_container_exampleContainer_innerContainer_right_list_item_date 14 Январь
+                    a(href="/newslist.html") 
+                        .content_container_exampleContainer_innerContainer_right_list_item
+                            .content_container_exampleContainer_innerContainer_right_list_item_text Линия Сталина: суровый отдых в усадьбах  на сутки 
+                            .content_container_exampleContainer_innerContainer_right_list_item_date 14 Январь
                     hr
-                    .content_container_exampleContainer_innerContainer_right_list_item
-                        .content_container_exampleContainer_innerContainer_right_list_item_text Аренда квартиры посуточно
-                        .content_container_exampleContainer_innerContainer_right_list_item_date 14 Январь
+                    a(href="/newslist.html") 
+                        .content_container_exampleContainer_innerContainer_right_list_item
+                            .content_container_exampleContainer_innerContainer_right_list_item_text Аренда квартиры посуточно
+                            .content_container_exampleContainer_innerContainer_right_list_item_date 14 Январь
                     hr
-                    .content_container_exampleContainer_innerContainer_right_list_item
-                        .content_container_exampleContainer_innerContainer_right_list_item_text Дворцово-парковый комплекс Чапских
-                        .content_container_exampleContainer_innerContainer_right_list_item_date 14 Январь
+                    a(href="/newslist.html") 
+                        .content_container_exampleContainer_innerContainer_right_list_item
+                            .content_container_exampleContainer_innerContainer_right_list_item_text Дворцово-парковый комплекс Чапских
+                            .content_container_exampleContainer_innerContainer_right_list_item_date 14 Январь
                     hr
-                    .content_container_exampleContainer_innerContainer_right_list_item
-                        .content_container_exampleContainer_innerContainer_right_list_item_text Дворцово-парковый комплекс Чапских
-                        .content_container_exampleContainer_innerContainer_right_list_item_date 14 Январь
+                    a(href="/newslist.html") 
+                        .content_container_exampleContainer_innerContainer_right_list_item
+                            .content_container_exampleContainer_innerContainer_right_list_item_text Дворцово-парковый комплекс Чапских
+                            .content_container_exampleContainer_innerContainer_right_list_item_date 14 Январь
                     hr
-                    .content_container_exampleContainer_innerContainer_right_list_item
-                        .content_container_exampleContainer_innerContainer_right_list_item_text Дворцово-парковый комплекс Чапских
-                        .content_container_exampleContainer_innerContainer_right_list_item_date 14 Январь
-
-                .content_container_exampleContainer_innerContainer_right_button
-                    span Посмотреть все
-                    include ../../assets/images/arrowLeftImg.svg
+                    a(href="/newslist.html") 
+                        .content_container_exampleContainer_innerContainer_right_list_item
+                            .content_container_exampleContainer_innerContainer_right_list_item_text Дворцово-парковый комплекс Чапских
+                            .content_container_exampleContainer_innerContainer_right_list_item_date 14 Январь
+                a(href="/newslist.html") 
+                    .content_container_exampleContainer_innerContainer_right_button
+                        span Посмотреть все
+                        include ../../assets/images/arrowLeftImg.svg
